navigation css gap fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,7 +118,7 @@ img{
 .navigation-bar{
   height: 100%;
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   align-items: center;
   justify-content: center;
 }
